src/test/ui/wf/wf-in-fn-ret.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-fn-ret.rs:10:16
   |
LL | struct MustBeCopy<T:Copy> {
   | ------------------------- required by `MustBeCopy`
...
LL | fn bar<T>() -> MustBeCopy<T>
   |                ^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
help: consider restricting this type parameter with `T: std::marker::Copy`
  --> $DIR/wf-in-fn-ret.rs:10:8
   |
LL | fn bar<T>() -> MustBeCopy<T>
   |        ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
